force-app/main/default/objects/Specialization__c/fields/Appointment_price__c.field-meta.xml
<CustomField>
    <fullName>Appointment_price__c</fullName>
    <description>Appointment price</description>
    <label>Appointment price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>