force-app/main/default/objects/Specialization__c/fields/Specialization_Image__c.field-meta.xml
<CustomField>
    <fullName>Specialization_Image__c</fullName>
    <formula>IMAGE(   Specialization_Image_URL__c  , Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Specialization Image</label>
    <type>Text</type>
</CustomField>