force-app/main/default/objects/Specialization__c/fields/Specialization_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Specialization_Image_URL__c</fullName>
    <label>Specialization Image URL</label>
    <type>Url</type>
</CustomField>